--- a/formulaone/Base.lproj/Main.storyboard
+++ b/formulaone/Base.lproj/Main.storyboard
@@ -46,20 +46,29 @@
             </objects>
             <point key="canvasLocation" x="739.69465648854964" y="-34.507042253521128"/>
         </scene>
-        <!--View Controller-->
+        <!--Detail Race View Controller-->
         <scene sceneID="dx9-pM-o3S">
             <objects>
-                <viewController id="hdD-8g-WSZ" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="Detail" id="hdD-8g-WSZ" customClass="DetailRaceViewController" customModule="formulaone" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="zZc-Vy-1U6">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="OTR-6m-T8c">
+                                <rect key="frame" x="16" y="118" width="361" height="211"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="nn3-m2-6Fc"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
+                    <connections>
+                        <outlet property="imageView" destination="OTR-6m-T8c" id="Kgh-Dp-iIN"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="X0E-Jz-Dzo" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1601" y="-35"/>
+            <point key="canvasLocation" x="1600.7633587786258" y="-35.211267605633807"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="vW1-J4-ICn">
