--- a/formulaone/Base.lproj/Main.storyboard
+++ b/formulaone/Base.lproj/Main.storyboard
@@ -72,6 +72,10 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="filled" title="Drivers List"/>
+                                <connections>
+                                    <action selector="showDriversListSegue:" destination="hdD-8g-WSZ" eventType="touchUpInside" id="nzs-j1-UBh"/>
+                                    <segue destination="Jh7-PV-FFs" kind="show" identifier="racersList" id="YFA-mc-JMZ"/>
+                                </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="nn3-m2-6Fc"/>
@@ -91,11 +95,11 @@
             <objects>
                 <tableViewController storyboardIdentifier="Drivers" id="Jh7-PV-FFs" customClass="ListDriverViewController" customModule="formulaone" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" id="bqI-6t-BLi">
-                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="8Wx-s2-4bp">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Driver" id="8Wx-s2-4bp">
                                 <rect key="frame" x="0.0" y="50" width="393" height="43.666667938232422"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="8Wx-s2-4bp" id="UUD-44-PQx">
@@ -109,6 +113,7 @@
                             <outlet property="delegate" destination="Jh7-PV-FFs" id="JFn-HW-mf8"/>
                         </connections>
                     </tableView>
+                    <navigationItem key="navigationItem" id="x6A-wA-hdl"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="l2H-zI-3Nk" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
