--- a/formulaone/Base.lproj/Main.storyboard
+++ b/formulaone/Base.lproj/Main.storyboard
@@ -135,9 +135,20 @@
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5jF-1o-tg3">
+                                            <rect key="frame" x="340" y="21" width="75" height="35"/>
+                                            <state key="normal" title="Button"/>
+                                            <buttonConfiguration key="configuration" style="filled" title="Button">
+                                                <color key="baseBackgroundColor" white="1" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            </buttonConfiguration>
+                                            <connections>
+                                                <action selector="favoriteButton:" destination="8Wx-s2-4bp" eventType="touchUpInside" id="wBy-YO-mO0"/>
+                                            </connections>
+                                        </button>
                                     </subviews>
                                     <constraints>
                                         <constraint firstAttribute="bottom" secondItem="d6H-EU-aVu" secondAttribute="bottom" id="4bg-5C-XNE"/>
+                                        <constraint firstItem="5jF-1o-tg3" firstAttribute="top" secondItem="UUD-44-PQx" secondAttribute="topMargin" constant="10" id="9kA-wL-3QN"/>
                                         <constraint firstItem="UIx-Xv-T7R" firstAttribute="leading" secondItem="d6H-EU-aVu" secondAttribute="trailing" constant="10" id="LzN-Ww-4wJ"/>
                                         <constraint firstItem="eYR-Dh-AkR" firstAttribute="bottom" secondItem="UUD-44-PQx" secondAttribute="bottomMargin" constant="10" id="O0p-R1-iDg"/>
                                         <constraint firstItem="d6H-EU-aVu" firstAttribute="top" secondItem="UUD-44-PQx" secondAttribute="top" constant="5" id="RRH-48-HAu"/>
@@ -147,6 +158,7 @@
                                         <constraint firstItem="eYR-Dh-AkR" firstAttribute="top" secondItem="UUD-44-PQx" secondAttribute="topMargin" constant="10" id="e1G-Rv-cdF"/>
                                         <constraint firstItem="UIx-Xv-T7R" firstAttribute="top" secondItem="UUD-44-PQx" secondAttribute="topMargin" constant="10" id="mMj-ZW-JjP"/>
                                         <constraint firstItem="d6H-EU-aVu" firstAttribute="top" secondItem="UUD-44-PQx" secondAttribute="top" constant="10" id="phd-xZ-blJ"/>
+                                        <constraint firstItem="5jF-1o-tg3" firstAttribute="leading" secondItem="d6H-EU-aVu" secondAttribute="trailing" constant="220" id="zOr-jD-Vou"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
@@ -154,6 +166,7 @@
                                     <outlet property="driverInformationsView" destination="mH6-X3-1Za" id="Unx-Nq-Xo0"/>
                                     <outlet property="driverNameView" destination="UIx-Xv-T7R" id="9gF-xb-QRv"/>
                                     <outlet property="driverNumberView" destination="eYR-Dh-AkR" id="jQq-xM-oUg"/>
+                                    <outlet property="favoriteButton" destination="5jF-1o-tg3" id="l9R-Gq-Pjd"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
